Fixed type on z-index

--- a/src/scss/components/_editor.scss
+++ b/src/scss/components/_editor.scss
@@ -76,7 +76,7 @@
   position: absolute;
   bottom: 10px;
   right: 10px;
-  z-indez: 3;
+  z-index: 3;
 }
 .subscription-result__actions {
   display: flex;
